# mteam-download

./: .gitignore  BUILD.md  BUILD_WINDOWS.md  QUICKSTART_BUILD.md  README.md  README_VUE.md  README_VUE_ZH.md  build-requirements.txt  build.bat  build.py  build.sh  config.example.yaml  index.html  mteam-query.spec  mteam_query.py  package-lock.json  package.json  requirements.txt  vite.config.js
.github/workflows/: deploy.yml
cargo/: Cargo.toml  README.md
cargo/src/: client.rs  config.rs  main.rs  menu.rs  models.rs  printer.rs  utils.rs
src/: App.vue  styles.css
src/lib/: categories.js  format.js  mteam-api.js  storage.js
